--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movies-finder",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AnnSaid.github.io/mymovies-react-redux",
+  "homepage": "https://annsaid.github.io/mymovies-react-redux/#/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
